# livextrem

./: .gitignore  404.html  LICENSE  README.md  api.html  index.html  installation.html  livextrem_compiler.bat  main.py  pyproject.toml  user-guide.html
.github/workflows/: ci.yml
buildspec/: livextrem.spec
ctk_testumgebung/: sample.py  teststyle.json
docs/: _config.yml  api.html  api.md  architecture.html  architecture.md  doku_marc.md  index.html  index.md  installation.html  installation.md  mkdocs.yml  setup.html  setup.md  strategy.html  strategy.md  user-guide.html  user-guide.md
docs/_includes/: info.md  tip.md  warning.md
docs/assets/styles/: custom.css
doku_marc/: index.html
livextrem/: .env  aaa_prov_main.py  api_tester.py  config.py  data_manager.py  database_connection.py  database_queries.py  database_queries_moderator.py  keydata.env  login.py  mainmenu.py  manager_dashboard.py  manager_gui.py  moderator_dashboard.py  role_selector.py  router.py  security.py  session_user.py  streamer_dashboard.py  style.json
livextrem/database/: livextrem.sql
livextrem/fremdsys/: fremdsys.py  klassen.py  notiz.txt  oauth.py  tapi_data.py  tapi_mod.py  test.py  test2.py  tw_privdata.py
search/: search_index.json
sonstigesEntwicklung/: erfassteDaten.txt
